@@ -313,6 +313,7 @@ subfloor_machine_count=__1__ __2__ in use on this subfloor
 machine_limit_force=Exact limit set [__1__]
 machine_limit_enforced=Limit enforced [__1__]
 machine_limit_set=Limit set [__1__]
+add_machine_module=Add a module
 add_beacon=Add a beacon
 in_total=__1__ in total
 priority_product=Priority Product
